# ubuntu_google_test_examples

./: .gitignore  README.md
gmock_example/: CMakeLists.txt  test.cpp
gtest_example/: CMakeLists.txt
gtest_example/src/: main.cpp  square_root.cpp
gtest_example/test/: tests.cpp
